--- a/NetFramework/Themes/VB/C1CommandBasedApp/App.config
+++ b/NetFramework/Themes/VB/C1CommandBasedApp/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <appSettings>
-        <add key="C1ApplicationTheme" value="RainerOrange" />
+        <add key="C1ApplicationTheme" value="MacBlue" />
     </appSettings>
     <connectionStrings>
         <add name="C1CommandBasedApp.My.MySettings.C1NWINDConnectionString"
