ADD: dynamic data set

--- a/NetFramework/Themes/VB/C1CommandBasedApp/C1CommandBasedApp.vbproj
+++ b/NetFramework/Themes/VB/C1CommandBasedApp/C1CommandBasedApp.vbproj
@@ -27,7 +27,9 @@
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -52,6 +54,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>C1NWINDDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Update="C1NWINDDataSet1.Designer.vb">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>C1NWINDDataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Update="Form1.Designer.vb">
       <DependentUpon>Form1.vb</DependentUpon>
@@ -93,6 +100,10 @@
     </None>
     <None Update="C1NWINDDataSet.xss">
       <DependentUpon>C1NWINDDataSet.xsd</DependentUpon>
+    </None>
+    <None Update="C1NWINDDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>C1NWINDDataSet1.Designer.vb</LastGenOutput>
     </None>
     <None Update="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
