--- a/NetFramework/Themes/VB/C1CommandBasedApp/App.config
+++ b/NetFramework/Themes/VB/C1CommandBasedApp/App.config
@@ -4,11 +4,15 @@
     </configSections>
     <appSettings>
         <add key="C1ApplicationTheme" value="MacBlue" />
+        <add key="C1DataSource" value="SQL" />
     </appSettings>
     <connectionStrings>
         <add name="C1CommandBasedApp.My.MySettings.C1NWINDConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\C1NWIND.MDB"
             providerName="System.Data.OleDb" />
+        <add name="C1CommandBasedApp.My.MySettings.C1NWindConnectionString1"
+            connectionString="Data Source=TomVM\SQLEXPRESS;Initial Catalog=C1NWind;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
