--- a/NetFramework/Themes/VB/C1CommandBasedApp/App.config
+++ b/NetFramework/Themes/VB/C1CommandBasedApp/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <appSettings>
         <add key="C1ApplicationTheme" value="MacBlue" />
-        <add key="C1DataSource" value="SQL" />
+        <add key="C1DataSource" value="Access" />
     </appSettings>
     <connectionStrings>
         <add name="C1CommandBasedApp.My.MySettings.C1NWINDConnectionString"
